--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "~9.1.6",
     "@datorama/akita": "^4.23.2",
     "@datorama/akita-ng-forms-manager": "^3.3.0",
-    "primeicons": "^3.0.0-rc.1",
+    "primeicons": "^3.0.0",
     "primeng": "^9.0.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
